--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -1,5 +1,7 @@
 .footer {
   padding: $space-desktop;
+  display: flex;
+  justify-content: center;
   font-size: 80%;
 
   @media (max-width: 960px) {
